Animal_shelter/force-app/main/default/objects/Adopter__c/fields/Home_Checked__c.field-meta.xml
<CustomField>
    <fullName>Home_Checked__c</fullName>
    <label>Home Checked</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>