Animal_shelter/force-app/main/default/objects/Adopter__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Adopters</relationshipLabel>
    <relationshipName>Adopters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>