Animal_shelter/force-app/main/default/objects/Adopter__c/validationRules/Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Address__c)</errorConditionFormula>
    <errorMessage>Address is required.</errorMessage>
</ValidationRule>